# jobsched-api

./: Dockerfile  README.rst  bootstrap  pyproject.toml  tox.ini
.github/workflows/: ci.yaml
.kustomization/: README.rst
.kustomization/base/: psp.yaml  rbac.yaml  sa.yaml
.kustomization/components/api/: cm.yaml  deployment.yaml  ingress.yaml  svc.yaml
.kustomization/overlays/dev/: kustomization.yaml
.kustomization/overlays/dev/configs/: base.yaml
.kustomization/overlays/dev/ingress/: api.yaml
.kustomization/overlays/prd/: kustomization.yaml
.kustomization/overlays/prd/configs/: base.yaml
.kustomization/overlays/prd/ingress/: api.yaml
etc/: pbs.conf
etc/sudoers.d/: jobsched-api
samples/: client.py
src/: __init__.py  __metadata__.py  app.py
src/api/: auth.py  pbs.py  routes.py
src/models/: job.py
src/services/: pbs.py  sched.py
src/settings/: config.py  ctx.py
src/utils/: __init__.py
tests/: conftest.py
tests/integration/: conftest.py  test_app.py  test_pbs_sched.py  test_sched.py
tests/unit/: conftest.py  test_job.py  test_pbs.py
