[tool.poetry]
name = "jobsched-api"
version = "0.1.0"
description = "A RESTful API for job scheduling operations."
authors = ["Renato Damas <rena2damas@gmail.com>"]
license = "MIT"
readme = "README.rst"
packages = [
    { include = "*", from = "src" }
]
homepage = ""
repository = "https://github.com/codectl/jobsched-api"
documentation = ""
keywords = [
    "jobsched-api",
    "hpc",
    "slurm",
    "altair",
    "pbs",
    "openpbs",
    "pbspro",
    "torque",
    "swagger",
    "openapi",
    "oas3",
    "rest",
    "api",
    "web",
    "flask",
    "python",
    "python3"
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]

[tool.poetry.dependencies]
apispec = "^6.0.2"
apispec-plugins = "^0.2.0"
apispec-ui = "^0.1.4"
flask = "^2.2.2"
flask-cors = "^3.0.10"
flask-restful = "^0.3.9"
pydantic = "^1.10.4"
python = "^3.9"
shell = "^1.0.1"

[tool.poetry.dev-dependencies]
coverage = "^7.1.0"
pre-commit = "^3.0.4"
pytest = "^7.2.1"
pytest-mock = "^3.10.0"

[tool.poetry.urls]
issues = "https://github.com/codectl/jobsched-api/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
